--- a/css/style-fud.css
+++ b/css/style-fud.css
@@ -15,6 +15,8 @@ body {
 
 .column-1 {
     width: 100%;
+    text-align: center;
+    margin-top: 8%;
 }
 
 .column-2 {
@@ -32,19 +34,6 @@ body {
     float: left;
 }
 
-.column-5 {
-    width: 100%;
-    float: left;
-    text-align: center;
-    font-size: 3vh;
-    color: #000000;
-    padding-top: 40px;
-}
-
-.foto {
-    width: 100%;
-}
-
 .row-c:after {
     content: "";
     display: table;
@@ -55,7 +44,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 0 5%;
 }
 
 a {
@@ -91,6 +79,7 @@ header {
 }
 
 .main-menu {
+    border-color: #000000;
     display: flex;
     list-style-type: none;
     justify-content: center;
@@ -98,7 +87,7 @@ header {
 }
 
 .menu-item {
-    margin: 0 3.5rem;
+    margin: 0 1rem;
     font-weight: 600;
     cursor: pointer;
     transition: 0.5s;
@@ -113,11 +102,13 @@ header {
 }
 
 .cta {
+    border-color: white;
+    border-width: 1px;
     padding: 10px 24px;
     border-radius: 30px;
     background-color: var(--main-color);
-    color: #000000;
-    margin: 0 3rem;
+    color: #ffffff;
+    margin: 0 1rem;
     font-weight: 600;
     cursor: pointer;
     transition: 0.5s;
@@ -129,14 +120,23 @@ header {
 }
 
 
-/* ---------- TWITTER ---------- */
+/* ---------- CENTRO ---------- */
 
-.twitter {
-    position: static;
-    margin: 10% 10% 10% 0%;
-    box-shadow: 0px 0px 7px 10px #292f33;
-    background-color: #292f33;
-    border-radius: 5px;
+h1 {
+    text-align: center;
+}
+
+.foto {
+    width: 20%;
+    padding: 0% 0% 2% 0%;
+}
+
+.content {
+    margin: 0% 10% 5% 10%;
+}
+
+p {
+    font-size: 18px;
 }
 
 
@@ -174,7 +174,7 @@ footer {
     width: 50px;
     border-radius: 50px;
     border: 1px solid #f2f2f2;
-    background-image: url(../img/InstagramBlanco.png);
+    background-image: url(../img/imagenesWeb/TwitterBlanco.png);
     background-position: center;
     background-size: 40%;
     background-repeat: no-repeat;
@@ -187,7 +187,7 @@ footer {
 }
 
 .social-icon:nth-of-type(2) {
-    background-image: url(../img/TelegramBlanco.png);
+    background-image: url(../img/imagenesWeb/TelegramBlanco.png);
 }
 
 .footer-menu-container {
@@ -210,137 +210,4 @@ footer {
     color: #f2f2f2;
     opacity: 0.3;
     text-align: center;
-}
-
-
-/* ESTILOS SLIDER */
-
-* {
-    box-sizing: border-box
-}
-
-.padi {
-    padding: 5%;
-}
-
-
-/* Slideshow container */
-
-.slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin: auto;
-    height: auto;
-}
-
-
-/* Hide the images by default */
-
-.mySlides {
-    display: none;
-}
-
-.mySlides img {
-    width: 100%;
-    /* Para que las imágenes ocupen todo el ancho del contenedor */
-    height: auto;
-    /* Para que la altura se ajuste automáticamente manteniendo la proporción */
-    height: 400px;
-    object-fit: cover;
-    /* Para que las imágenes se ajusten y recorten según el tamaño del contenedor */
-}
-
-
-/* Next & previous buttons */
-
-.prev,
-.next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-}
-
-
-/* Position the "next button" to the right */
-
-.next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-}
-
-
-/* On hover, add a black background color with a little bit see-through */
-
-.prev:hover,
-.next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-
-/* Caption text */
-
-.text {
-    color: #f2f2f2;
-    font-size: 15px;
-    padding: 8px 12px;
-    position: absolute;
-    bottom: 8px;
-    width: 100%;
-    text-align: center;
-}
-
-
-/* Number text (1/3 etc) */
-
-.numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-}
-
-
-/* The dots/bullets/indicators */
-
-.dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
-
-.active,
-.dot:hover {
-    background-color: #717171;
-}
-
-
-/* Fading animation */
-
-.fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-
-@keyframes fade {
-    from {
-        opacity: .4
-    }
-    to {
-        opacity: 1
-    }
 }
