--- a/css/style-home.css
+++ b/css/style-home.css
@@ -6,6 +6,12 @@
     --second-color: #ffffff;
 }
 
+.seymour-one-regular {
+    font-family: "Seymour One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
     position: relative;
     background: linear-gradient(transparent, rgb(36, 158, 48));
@@ -98,11 +104,13 @@ header {
 }
 
 .menu-item {
-    margin: 0 3.5rem;
-    font-weight: 600;
+    margin: 0 3rem;
+    font-weight: 400;
     cursor: pointer;
     transition: 0.5s;
-    color: #000000;
+    color: #ffffff;
+    font-family: "Seymour One", sans-serif;
+    font-style: normal;
 }
 
 .menu-item:hover {
@@ -118,14 +126,16 @@ header {
     background-color: var(--main-color);
     color: #000000;
     margin: 0 3rem;
-    font-weight: 600;
     cursor: pointer;
     transition: 0.5s;
+    font-family: "Seymour One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .cta:hover {
-    color: #ffffff;
-    background-color: #000000;
+    color: #000000;
+    background-color: #ffffff;
 }
 
 
