--- a/views/game.html
+++ b/views/game.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Looking The World Test</h1>
+        <h1>Challenge The World!</h1>
         <div class="content">
             <img id="image" src="" alt="Imagen">
             <p id="frase"></p>
