--- a/css/game.css
+++ b/css/game.css
@@ -1,8 +1,20 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
     margin: 20px;
-    background: rgb(2,0,36);
+    background: rgb(2, 0, 36);
     background: linear-gradient(90deg, #00825a 0%, #ffffff 35%, #00825a 100%);
+}
+
+.back-button {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+}
+
+.back-button img {
+    width: 100px;
+    height: auto;
+    cursor: pointer;
 }
 
 h1 {
@@ -20,11 +32,20 @@ h1 {
     text-align: left;
 }
 
+.question {
+    text-align: center;
+}
+
 img {
     margin-top: 20px;
     border: 2px solid #ccc;
     border-radius: 10px;
     max-width: 100%;
+    width: 90%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 p {
@@ -36,6 +57,7 @@ ul {
     list-style-type: none;
     padding: 0;
     max-width: 100%; /* Limitar el ancho de las respuestas al ancho de la imagen */
+    font-family: 'Roboto', Arial, sans-serif; /* Apply Roboto font */
 }
 
 ul li {
@@ -45,10 +67,21 @@ ul li {
     border-radius: 5px;
     cursor: pointer; /* Cambia el cursor a una mano cuando se pasa sobre un elemento <li> */
     transition: background-color 0.3s ease; /* Agrega transición suave para el cambio de color */
+    font-family: 'Roboto', Arial, sans-serif; /* Apply Roboto font */
 }
 
 ul li:hover {
     background-color: #ddd; /* Cambia el color de fondo a un tono más grisáceo cuando se pasa el cursor */
+}
+
+.reflection {
+    font-size: 1.2em;
+    color: #000;
+    background-color: #f0f8ff;
+    padding: 10px;
+    border-left: 5px solid #00825a;
+    margin-top: 20px;
+    border-radius: 5px;
 }
 
 #refreshButton {
