--- a/views/mig.html
+++ b/views/mig.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/style-mig.css">
     <link rel="icon" href="../img/Logoreal.png">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Seymour+One&display=swap');
+    </style>
     <script src="../js/box.js"></script>
     <title>Home</title>
 </head>
@@ -30,31 +33,30 @@
             </a>
             </a>
             <a href="game.html">
-                <li class="cta">Ponte a prueba!</li>
+                <li class="cta">Challenge!</li>
                 </form>
             </a>
         </ul>
         <script src="../js/home.js"></script>
     </header>
-    <div class="column-1">
-        <img src="../img/Logoreal.png" class="foto">
+    <div class="column-2">
+        <img src="../img/inmigracion-espana-2024-03-01-18-03-50.png" class="foto">
+    </div>
+    <div class="column-2">
+        <img src="../img/La-violencia-contra-la-mujer-puede-ser-fisica-pero-tambien-psicologica.png" class="foto">
     </div>
     <div class="content">
         <h1></h1>
-        <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..." Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Nunc nec dignissim libero. Sed pellentesque volutpat metus, sit amet efficitur velit rutrum id. Phasellus condimentum justo nec magna viverra tristique. Praesent faucibus luctus libero, et tempus augue eleifend ut. In ac commodo
-            urna. Vivamus vel lacinia augue. Donec hendrerit, odio non auctor rhoncus, mi justo tempus erat, sit amet dictum nisi urna sed orci. Nam hendrerit lacus sed risus sollicitudin, non volutpat lorem tempus. Sed non elit aliquam, hendrerit dolor
-            sit amet, condimentum metus. Phasellus dictum nunc turpis, at porttitor erat convallis nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas posuere elit id nibh dictum, at fringilla mi euismod.
-            In quis accumsan nibh, a vulputate nibh.</p>
+        <p>Unfortunately there is no perfect world and you may wonder why I say this, right? It's easy in this world where there is a lot of inequality, very rich people with enough fortune for 10 lives and people who don't even have enough to live their
+            tomorrow. People who are born in quiet countries without conflicts or privileges. And others that are born in countries at war such as Palestine and Israel. </p>
 
-        <p>Pellentesque vehicula mollis nibh sed ullamcorper. Vivamus pretium nunc a orci laoreet, eget vulputate risus rutrum. Sed fermentum sapien urna. Nunc tempus quam varius ante laoreet, sed luctus urna mattis. Sed venenatis fermentum sodales. Donec
-            justo neque, dapibus in bibendum non, auctor ut nisl. Vivamus orci felis, euismod non rhoncus nec, congue hendrerit ex. Mauris pellentesque, mauris ullamcorper fermentum pretium, turpis nisl accumsan mi, in semper justo nisl ut nunc. Sed elementum
-            eros sit amet augue ullamcorper mollis.</p>
+        <p>People who are born with an imposed role in society and others who are born with more facilities just because of their sex. </p>
 
-        <p>Mauris ut nunc at felis vulputate varius id id sem. Mauris mollis faucibus eros, ultricies iaculis leo. Morbi placerat sed dui et interdum. Etiam volutpat ex posuere dolor egestas fringilla. Integer sagittis nunc sed ex efficitur interdum. Phasellus
-            egestas enim in turpis volutpat finibus. Nullam vulputate venenatis egestas. Nulla eu massa vehicula, dapibus lorem eu, bibendum erat. Cras vel pellentesque sapien. Quisque egestas varius ipsum vel vestibulum. Vestibulum pharetra placerat
-            elit nec pellentesque. Pellentesque consectetur turpis vel vulputate facilisis. Sed bibendum, nibh id fermentum fringilla, lacus turpis facilisis magna, et tristique est purus nec velit. Maecenas rutrum luctus cursus. Ut et aliquet neque,
-            eget imperdiet quam. Donec sed leo sit amet dui imperdiet semper a vitae est.</p>
+        <p>All is not lost since there are many movements that promote solving these conflicts, but there are others that do not understand it and even go against it. One of the most common cases is immigration, a topic that is very present in our country
+            and that grows every year. People who go against immigration without understanding all the problems they have, such as not having friends or acquaintances, escaping their country, not understanding the language or not finding work to cover
+            their basic needs.</p>
+
+        <p>Problems of prejudice and the like could be fixed with a good education from a young age and an understanding of their origin and culture. I know that if we make an effort as a society we can change all these injustices or at least try to.</p>
 
     </div>
     <footer>
