--- a/css/style-fud.css
+++ b/css/style-fud.css
@@ -6,6 +6,12 @@
     --second-color: #ffffff;
 }
 
+.seymour-one-regular {
+    font-family: "Seymour One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
     position: relative;
     background: linear-gradient(transparent, rgb(36, 158, 48));
@@ -22,6 +28,9 @@ body {
 .column-2 {
     width: 50%;
     float: left;
+    margin-top: 8%;
+    margin-bottom: 4%;
+    text-align: center;
 }
 
 .column-3 {
@@ -86,11 +95,13 @@ header {
 }
 
 .menu-item {
-    margin: 0 3.5rem;
-    font-weight: 600;
+    margin: 0 3rem;
+    font-weight: 400;
     cursor: pointer;
     transition: 0.5s;
     color: #000000;
+    font-family: "Seymour One", sans-serif;
+    font-style: normal;
 }
 
 .menu-item:hover {
@@ -106,14 +117,16 @@ header {
     background-color: var(--main-color);
     color: #000000;
     margin: 0 3rem;
-    font-weight: 600;
     cursor: pointer;
     transition: 0.5s;
+    font-family: "Seymour One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .cta:hover {
-    color: #ffffff;
-    background-color: #000000;
+    color: #000000;
+    background-color: #ffffff;
 }
 
 
@@ -124,8 +137,11 @@ h1 {
 }
 
 .foto {
-    width: 20%;
-    padding: 0% 0% 2% 0%;
+    width: 100%;
+    height: auto;
+    max-width: 650px;
+    object-fit: cover;
+    height: 400px;
 }
 
 .content {
@@ -134,6 +150,7 @@ h1 {
 
 p {
     font-size: 18px;
+    margin-bottom: 24px;
 }
 
 
