--- a/views/fud.html
+++ b/views/fud.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/style-fud.css">
     <link rel="icon" href="../img/Logoreal.png">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Seymour+One&display=swap');
+    </style>
     <script src="../js/box.js"></script>
     <title>Home</title>
 </head>
@@ -30,31 +33,31 @@
             </a>
             </a>
             <a href="game.html">
-                <li class="cta">Ponte a prueba!</li>
+                <li class="cta">Challenge!</li>
                 </form>
             </a>
         </ul>
         <script src="../js/home.js"></script>
     </header>
-    <div class="column-1">
-        <img src="../img/Logoreal.png" class="foto">
+    <div class="column-2">
+        <img src="../img/trotuman.png" class="foto">
+    </div>
+    <div class="column-2">
+        <img src="../img/verduras.png" class="foto">
     </div>
     <div class="content">
         <h1></h1>
-        <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..." Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Nunc nec dignissim libero. Sed pellentesque volutpat metus, sit amet efficitur velit rutrum id. Phasellus condimentum justo nec magna viverra tristique. Praesent faucibus luctus libero, et tempus augue eleifend ut. In ac commodo
-            urna. Vivamus vel lacinia augue. Donec hendrerit, odio non auctor rhoncus, mi justo tempus erat, sit amet dictum nisi urna sed orci. Nam hendrerit lacus sed risus sollicitudin, non volutpat lorem tempus. Sed non elit aliquam, hendrerit dolor
-            sit amet, condimentum metus. Phasellus dictum nunc turpis, at porttitor erat convallis nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas posuere elit id nibh dictum, at fringilla mi euismod.
-            In quis accumsan nibh, a vulputate nibh.</p>
+        <p>Can you imagine a world without pollution? Exactly me neither, it's very sad but that dream doesn't look like it will ever come true, or at least if we continue wasting and polluting like we do now. In this section of the website you will learn
+            about what we eat, waste and pollute. Prepared? Go for it!</p>
 
-        <p>Pellentesque vehicula mollis nibh sed ullamcorper. Vivamus pretium nunc a orci laoreet, eget vulputate risus rutrum. Sed fermentum sapien urna. Nunc tempus quam varius ante laoreet, sed luctus urna mattis. Sed venenatis fermentum sodales. Donec
-            justo neque, dapibus in bibendum non, auctor ut nisl. Vivamus orci felis, euismod non rhoncus nec, congue hendrerit ex. Mauris pellentesque, mauris ullamcorper fermentum pretium, turpis nisl accumsan mi, in semper justo nisl ut nunc. Sed elementum
-            eros sit amet augue ullamcorper mollis.</p>
+        <p>In recent years, the level of nutrition in our society has declined incredibly. This may have largely happened due to globalization and large companies like “McDonalds” that have created a junk food empire.</p>
 
-        <p>Mauris ut nunc at felis vulputate varius id id sem. Mauris mollis faucibus eros, ultricies iaculis leo. Morbi placerat sed dui et interdum. Etiam volutpat ex posuere dolor egestas fringilla. Integer sagittis nunc sed ex efficitur interdum. Phasellus
-            egestas enim in turpis volutpat finibus. Nullam vulputate venenatis egestas. Nulla eu massa vehicula, dapibus lorem eu, bibendum erat. Cras vel pellentesque sapien. Quisque egestas varius ipsum vel vestibulum. Vestibulum pharetra placerat
-            elit nec pellentesque. Pellentesque consectetur turpis vel vulputate facilisis. Sed bibendum, nibh id fermentum fringilla, lacus turpis facilisis magna, et tristique est purus nec velit. Maecenas rutrum luctus cursus. Ut et aliquet neque,
-            eget imperdiet quam. Donec sed leo sit amet dui imperdiet semper a vitae est.</p>
+        <p>People have less and less patience and companies know it, which is why every second counts and the quality of the food is reflected in that philosophy. The cycle of seasons has also been broken where you can currently eat a fruit regardless of
+            whether it is in season or not.</p>
+
+        <p>And what does everything I said before have to do with it? Very simple, since there is so much demand for orders from all over the world for all foods, this means a great expense in transportation, something that each vehicle (whether air, water
+            or land) contaminates. It is not only transportation but also what we throw in the trash, there is more and more food waste in Spain and if we add to that the thousands of tons of plastics that are produced in the world to bag this food...
+            BOOM! We have already created pollution in the environment. Remember we are NOT alone on this planet, we must take care of it if we want to continue living here in the future.</p>
 
     </div>
     <footer>
