--- a/views/wimen.html
+++ b/views/wimen.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../css/style-wimen.css">
     <link rel="icon" href="../img/Logoreal.png">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Seymour+One&display=swap');
+    </style>
     <script src="../js/box.js"></script>
     <title>Home</title>
 </head>
@@ -30,31 +33,29 @@
             </a>
             </a>
             <a href="game.html">
-                <li class="cta">Ponte a prueba!</li>
+                <li class="cta">Challenge!</li>
                 </form>
             </a>
         </ul>
         <script src="../js/home.js"></script>
     </header>
-    <div class="column-1">
-        <img src="../img/Logoreal.png" class="foto">
+    <div class="column-2">
+        <img src="../img/banksy.png" class="foto">
+    </div>
+    <div class="column-2">
+        <img src="../img/ted-talk.png" class="foto">
     </div>
     <div class="content">
         <h1></h1>
-        <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." "There is no one who loves pain itself, who seeks after it and wants to have it, simply because it is pain..." Lorem ipsum dolor sit amet, consectetur
-            adipiscing elit. Nunc nec dignissim libero. Sed pellentesque volutpat metus, sit amet efficitur velit rutrum id. Phasellus condimentum justo nec magna viverra tristique. Praesent faucibus luctus libero, et tempus augue eleifend ut. In ac commodo
-            urna. Vivamus vel lacinia augue. Donec hendrerit, odio non auctor rhoncus, mi justo tempus erat, sit amet dictum nisi urna sed orci. Nam hendrerit lacus sed risus sollicitudin, non volutpat lorem tempus. Sed non elit aliquam, hendrerit dolor
-            sit amet, condimentum metus. Phasellus dictum nunc turpis, at porttitor erat convallis nec. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas posuere elit id nibh dictum, at fringilla mi euismod.
-            In quis accumsan nibh, a vulputate nibh.</p>
+        <p>Violence is always present, always has been and sadly always will be. Violence in our society will never disappear or at least if we continue the same. There are a thousand current cases where there is a clear abuse of violence, the situation
+            with Russia crosses everyone's mind. In this section of the website I want to talk about the difference between violence and conflicts, also about the importance of words and the different violence that exists since there is not a single violence.
+        </p>
 
-        <p>Pellentesque vehicula mollis nibh sed ullamcorper. Vivamus pretium nunc a orci laoreet, eget vulputate risus rutrum. Sed fermentum sapien urna. Nunc tempus quam varius ante laoreet, sed luctus urna mattis. Sed venenatis fermentum sodales. Donec
-            justo neque, dapibus in bibendum non, auctor ut nisl. Vivamus orci felis, euismod non rhoncus nec, congue hendrerit ex. Mauris pellentesque, mauris ullamcorper fermentum pretium, turpis nisl accumsan mi, in semper justo nisl ut nunc. Sed elementum
-            eros sit amet augue ullamcorper mollis.</p>
+        <p>There are different types of violence, such as cultural and gender, but what they all agree on is that a conflict has previously occurred. This is where the importance of reasoning and words comes in, it is important not to be impulsive and most
+            importantly to have empathy. Empathy is an emotion that develops from a young age, this is where education comes in. A good education leads to a greater development of empathy which makes active communication easier.</p>
 
-        <p>Mauris ut nunc at felis vulputate varius id id sem. Mauris mollis faucibus eros, ultricies iaculis leo. Morbi placerat sed dui et interdum. Etiam volutpat ex posuere dolor egestas fringilla. Integer sagittis nunc sed ex efficitur interdum. Phasellus
-            egestas enim in turpis volutpat finibus. Nullam vulputate venenatis egestas. Nulla eu massa vehicula, dapibus lorem eu, bibendum erat. Cras vel pellentesque sapien. Quisque egestas varius ipsum vel vestibulum. Vestibulum pharetra placerat
-            elit nec pellentesque. Pellentesque consectetur turpis vel vulputate facilisis. Sed bibendum, nibh id fermentum fringilla, lacus turpis facilisis magna, et tristique est purus nec velit. Maecenas rutrum luctus cursus. Ut et aliquet neque,
-            eget imperdiet quam. Donec sed leo sit amet dui imperdiet semper a vitae est.</p>
+        <p>Next I would like to talk about TED TALKs, TED TALKs are a movement of presentations which must have a simple and repeatable idea that is not very complex. It is important that the visual part coincides with the oral part. The most important thing
+            about TED TALKs is that you try to connect with the listeners either in a humorous or sarcastic way and that you do not deviate too much from your main topic.</p>
 
     </div>
     <footer>
